LU-6990 lproc: set parameter nosquash_nids correctly

Fix the code to set parameter nosquash_nids correctly by echo command,
no matter with "-n" option or not.

Signed-off-by: Emoly Liu <emoly.liu@intel.com>
Change-Id: Ia4bf1ce32d76d4acd90aab5b799780e5e256cc29
Reviewed-on: http://review.whamcloud.com/15985
Reviewed-by: Bobi Jam <bobijam@hotmail.com>
Reviewed-by: Jian Yu <jian.yu@intel.com>
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>